<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/side_story_content_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <com.kyigames.feth.view.LabelWithBar
            style="@style/LabelWithBar"
            android:padding="0dp"
            app:text="@string/clear_reward" />

        <TextView
            android:id="@+id/side_story_content_clear_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:singleLine="false"
            android:text="side_story_content_clear_reward"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <com.kyigames.feth.view.LabelWithBar
            style="@style/LabelWithBar"
            android:padding="0dp"
            app:text="@string/mission_reward" />

        <TextView
            android:id="@+id/side_story_content_mission_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:singleLine="false"
            android:text="side_story_content_mission_reward"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <com.kyigames.feth.view.LabelWithBar
            style="@style/LabelWithBar"
            android:padding="0dp"
            app:text="@string/knights_reward" />

        <TextView
            android:id="@+id/side_story_content_knights_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:singleLine="false"
            android:text="side_story_content_knights_reward"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>